syntax = "proto3";

package proto.auth;

option go_package = "github.com/and-period/furumane/proto/auth";

import "proto/auth/common.proto";

// Admin 管理者情報
message Admin {
  string       id            = 1; // 管理者ID
  ProviderType provider_type = 2; // 認証種別
  string       email         = 3; // メールアドレス
  int64        created_at    = 4; // 登録日時
  int64        updated_at    = 5; // 更新日時
}
