syntax = "proto3";

package proto.auth;

option go_package = "github.com/and-period/furumane/proto/auth";

// AdminAuth 管理者認証情報
message AdminAuth {
  string admin_id      = 1; // 管理者ID
  string access_token  = 2; // アクセストークン
  string refresh_token = 3; // リフレッシュトークン
  int32  expires_in    = 4; // 有効期限(sec)
}
